--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.7.0"
   }
 }
